--- a/index.html
+++ b/index.html
@@ -11,18 +11,20 @@
 <!--Header Section-->
   <header>
     <div class="container">
+      <div class="top-menu">
       <div class="logo-title">
         <img src="./resources/images/logo-white.png">
         <span>Tortoiseshell Optics</span>
       </div>
       <nav>
-        <ul>
-          <li>Services</li>
-          <li>Products</li>
-          <li>Contact</li>
-        </ul>
+        <span>Services</span>
+        <span>Products</span>
+        <span>Contact</span>
       </nav>
-      <div class="main-title">
+      </div>
+    </div>
+    <div class="main container">
+      <div class="main-banner">
         <span>DON'T JUST LOOK, SEE.</span>
       </div>
     </div>
@@ -31,16 +33,16 @@
   <!--Features Section-->
   <div class="container">
     <div class="features">
-      <div class="feature-item">
-        <img src="./resources/images/paper-icon.png">
+      <div class="feature-item exams">
+        <img src="./resources/images/paper-icon.png" class="exams">
         <span>Coprehensive Exams</span>
       </div>
-      <div class="feature-item">
-        <img src="./resources/images/ruler-icon.png">
+      <div class="feature-item fittings">
+        <img src="./resources/images/ruler-icon.png" class="fittings">
         <span>Custom Fittings</span>
       </div>
       <div class="feature-item">
-        <img src="./resources/images/truck-icon.png">
+        <img src="./resources/images/truck-icon.png" class="delivery">
         <span>Fast Delivery</span>
       </div>
     </div>
@@ -49,24 +51,28 @@
   <!--Info Section-->
   <div class="container">
     <div class="info">
-      <div class="info-item">
-        <span>PHILOSOPHY</span>
+      <div class="info-item philosophy">
+        <div class="info-item-title">
+        <span>PHILOSOPHY</span></div>
         <p>Over 75% of our brains are dedicated to one sense: vision. We believe everyone deserves to see the world, no matter what. That's why we offer eye exams, custom fittings, and quick delivery at a low cost. It's your vision that makes ours.</p>
       </div>
       <div class="info-item">
-        <span>APPOINTMENTS</span>
+        <div class="info-item-title">
+        <span>APPOINTMENTS</span></div>
         <p>Schedule an appointment by calling us at (312) 654-0987. We're open Tuesday - Saturday, 9AM - 6PM.</p>
       </div>
     </div>
   </div>
 
   <!--Footer Section-->
+  <footer>
   <div class="container">
     <div class="footer">
       <img src="./resources/images/logo-black.png">
       <span>Copyright Tortoiseshell Optics</span>
     </div>
   </div>
+</footer>
 
   </body>
 </html>
