Completed tablet and mobile.

--- a/index.html
+++ b/index.html
@@ -16,10 +16,13 @@
         <img src="./resources/images/logo-white.png">
         <span>Tortoiseshell Optics</span>
       </div>
-      <nav>
+      <nav class="desktop">
         <span>Services</span>
         <span>Products</span>
         <span>Contact</span>
+      </nav>
+      <nav class="tablet-mobile">
+        <span>Menu</span>
       </nav>
       </div>
     </div>
@@ -66,7 +69,7 @@
 
   <!--Footer Section-->
   <footer>
-  <div class="container">
+  <div class="container footer">
     <div class="footer">
       <img src="./resources/images/logo-black.png">
       <span>Copyright Tortoiseshell Optics</span>
